# QChember

./: .cirrus.yml  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  bootstrap.py  compile.sh  flake.nix  mkdocs.yml
.ci/: build.sh
.github/workflows/: cmake-multi-platform.yml
.semaphore/: semaphore.yml
blasbind/: CMakeLists.txt
blasbind/include/: blasbind.hpp  lapackinterface.hpp
blasbind/src/: dgeev.cpp  dgemm.cpp  dgeqrf.cpp  dgesv.cpp  dggev.cpp  dorgqr.cpp  dpotrf.cpp  dsyev.cpp  dsyevd.cpp  dsygv.cpp  sgemm.cpp
blasbind/tests/: gemm_test.cpp
cmake/: CompilerHelpers.cmake  FindBLAS_LAPACK.cmake  FindCUDA_CUBLAS.cmake
common/include/: benchmark_api.hpp  commons.hpp  logging_api.hpp  testing_api.hpp
data/structures/: Helium.xyz  Neon.xyz  Oxygen.xyz
docs/: Doxyfile  index.md
docs/NewSCF API Reference/: cis_api.md
docs/NewSCF API Reference/Modules/: module_lacis.md  module_lacislapack.md
include/newscf/: common.hpp  diis.hpp  lapackinterface.hpp  ndtx.hpp  newscf.hpp
include/qchember/api/: cis.hpp
include/qchember/common/: testing_cis.hpp
libmatrix/: CMakeLists.txt
libmatrix/include/: matrix.hpp  ndtx.hpp
libmatrix/src/: matrix_add.cpp  matrix_mul.cpp  matrix_sub.cpp
libmatrix/tests/: matrix_test.cpp
libqcex/: CMakeLists.txt
libqcex/include/: libcint_wrapper.hpp  qcex.hpp  qcex_utils.hpp
libqcex/src/: bse_handler.cpp  geometry.cpp  libcint_wrapper.cpp  rhf.cpp
libqcex/tests/: bse_test.cpp  geometry_test.cpp  libcint_wrapper_test.cpp
libqcex/tests/data/: Water.xyz  def2-SVP.bas  def2-TZVPP.bas
modules/geomopt/: CMakeLists.txt  geomopt.hpp  pso.cpp
modules/geomopt/tests/: lj_clusters.cpp  rastrigin.cpp
modules/lacis/: lacis.cpp  matrixmarketio.cpp
modules/lacis/tests/: basictest.cpp
modules/lacislapack/: CMakeLists.txt  symeigen.cpp  symlinearsolver.cpp
modules/libcint-wrapper/: cint_hf.cpp
modules/mm/: mm.hpp  tip4p.hpp
modules/newscf-utils/: bse_handler.cpp  geometry.cpp
modules/newscf-utils/tests/: bseload.cpp
private_api/newscf/: newscf_utils.hpp  testing_cis.hpp
public_api/newscf/: cis.hpp  newscf.hpp
scripts/: build_gcc_debug.sh  build_gcc_release.sh  build_intel2023_release.sh  build_intel2025_release.sh
src/: aux_funcs.cpp  bse_handler.cpp  geometry.cpp  libcint_wrapper.cpp
src/atomscf/: rhf.cpp
src/blas/: dgemm.cpp
src/lacis/: CMakeLists.txt  lacis.cpp  matrixmarketio.cpp
src/lacislapack/: lacislapack.hpp
src/lacislapack/tests/: eigensolver_test.cpp  linearsolver_test.cpp
src/lapack/: dgeev.cpp  dgeqrf.cpp  dgesv.cpp  dggev.cpp  dorgqr.cpp  dpotrf.cpp  dsyev.cpp  dsyevd.cpp  dsygv.cpp  dsygvd.cpp  dsysv.cpp  dtrsm.cpp
src/libcint-wrapper/: CMakeLists.txt  cint_init.cpp
src/newscf-utils/: CMakeLists.txt
src/newscf-utils/tests/: geomload.cpp
src/scf/: CMakeLists.txt  scf.cpp
src/scf/tests/: he_hfm.cpp
tests/: atomscf_test.cpp  bse_test.cpp  geometry_test.cpp
